tools/tests/errors/int_from_float_str.ki
discard Integer("3.5")
